Fixed interrupted exception that occurs in retry logic, made checkpoint logic more robust, updated the tradeoffs file, and added documentation for classes